Fixes contrast on submit button

--- a/css/main.css
+++ b/css/main.css
@@ -102,9 +102,8 @@ form button {
   background: none;
   border: 2px solid #00a05a;
   padding: 1rem;
-  color: #00a05a;
+  color: #008147;
   text-transform: uppercase;
-  font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
 }
